# topic-builder-dev

./: .env  .gitignore  CODEOWNERS  Dockerfile  README.md  docker-compose.yml  liquibase.properties  package-lock.json  package.json  pyproject.toml
deploy/: notes.md  parameters.json  sg_change_data.json  tags.json
docs/: launch.sample.json
notebooks/nlp_workflow/: backfill_workflow.py
notebooks/nlp_workflow/data_ingestion/: config.py  data_ingestion.py
notebooks/nlp_workflow/nlp_inference/: config.py  nlp_inference.py  udf.py
notebooks/nlp_workflow/nlp_inference/intent_classifier/: __init__.py  config.py  data_utils.py  fine_tune_text_classification.py  intent_classifier.py  metrics_utils.py  optim_utils.py  supervised_data_preprocessing.py
notebooks/nlp_workflow/topic_evaluation/: topic_evaluation.py
rfc/: rfc.json
src/app/: Dockerfile  app.py  logging_config.py  templates.py
src/app/apis/routes/: base.py
src/app/apis/routes/frontend/: __init__.py  login.py  nlp_topic_builder.py
src/app/apis/schemas/: user.py
src/app/crypto/: security.py
src/app/database/: __init__.py  base.py  exports.py
src/app/expr/: nodes.py  ops.py
src/app/sql/: env.py  query.py
src/app/static/: querybuilder-custom.js
src/app/templates/sql/expr/: _Date.sql  _Intent.sql  _Lemma.sql  _Sentiment.sql  _Similarity.sql  _Source.sql  expr.sql
src/db/migrations/: 000_dbinit.sql
src/scripts/: create_user.py  load_sample_dataset.py  load_sentence_sample.py
tests/: credentials.json  postman-collection.json  postman-environment.json
